# softsynth-testbed

./: .gitmodules  CMakeLists.txt  README.md  buildinstructions.txt  main.cpp
builtprogram/: description.txt
gui/: CMakeLists.txt  main.cpp
sound/: AudioStream.cpp  AudioStream.h  CMakeLists.txt  SynthManager.cpp  SynthManager.h  main.cpp
sound/synthmodules/: Adelay.cpp  Adelay.h  AudioDelay.h  MoogVCF.cpp  MoogVCF.h  WaveTableOsc.cpp  WaveTableOsc.h  envelope.cpp
synthmodules/: Adelay.cpp  Adelay.h  AudioDelay.cpp  PlateReverb.cpp  PlateReverb.h  envelope.h
